--- a/luftdaten/base_image/Dockerfile
+++ b/luftdaten/base_image/Dockerfile
@@ -1,4 +1,4 @@
-FROM balenalib/raspberry-pi-debian-python:3.7.3-stretch-build
+FROM balenalib/raspberry-pi-debian-python:3.7.4-build
 
 WORKDIR /usr/src
 
